--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
+  },
+  "dependencies": {
+    "json-server": "^0.16.3",
+    "jsonwebtoken": "^8.5.1"
   }
 }
